// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddCollectionPanelWrapper Component Rendering should match snapshot 1`] = `
<div>
  <div
    class="ms-Stack addCollectionPanelWrapper css-115"
  >
    <div
      class="ms-StackItem addCollectionPanelHeader css-116"
    >
      <span
        class="themeText css-117"
      >
        Configure the properties for the new container.
      </span>
    </div>
    <div
      class="ms-StackItem addCollectionPanelBody css-116"
    >
      <div
        data-testid="add-collection-panel"
      >
        <div
          data-testid="explorer-prop"
        >
          no-explorer
        </div>
        <div
          data-testid="copy-job-flow"
        >
          true
        </div>
        <button
          data-testid="submit-button"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddCollectionPanelWrapper Component Rendering should match snapshot with both props 1`] = `
<div>
  <div
    class="ms-Stack addCollectionPanelWrapper css-115"
  >
    <div
      class="ms-StackItem addCollectionPanelHeader css-116"
    >
      <span
        class="themeText css-117"
      >
        Configure the properties for the new container.
      </span>
    </div>
    <div
      class="ms-StackItem addCollectionPanelBody css-116"
    >
      <div
        data-testid="add-collection-panel"
      >
        <div
          data-testid="explorer-prop"
        >
          explorer-present
        </div>
        <div
          data-testid="copy-job-flow"
        >
          true
        </div>
        <button
          data-testid="submit-button"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddCollectionPanelWrapper Component Rendering should match snapshot with explorer prop 1`] = `
<div>
  <div
    class="ms-Stack addCollectionPanelWrapper css-115"
  >
    <div
      class="ms-StackItem addCollectionPanelHeader css-116"
    >
      <span
        class="themeText css-117"
      >
        Configure the properties for the new container.
      </span>
    </div>
    <div
      class="ms-StackItem addCollectionPanelBody css-116"
    >
      <div
        data-testid="add-collection-panel"
      >
        <div
          data-testid="explorer-prop"
        >
          explorer-present
        </div>
        <div
          data-testid="copy-job-flow"
        >
          true
        </div>
        <button
          data-testid="submit-button"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddCollectionPanelWrapper Component Rendering should match snapshot with goBack prop 1`] = `
<div>
  <div
    class="ms-Stack addCollectionPanelWrapper css-115"
  >
    <div
      class="ms-StackItem addCollectionPanelHeader css-116"
    >
      <span
        class="themeText css-117"
      >
        Configure the properties for the new container.
      </span>
    </div>
    <div
      class="ms-StackItem addCollectionPanelBody css-116"
    >
      <div
        data-testid="add-collection-panel"
      >
        <div
          data-testid="explorer-prop"
        >
          no-explorer
        </div>
        <div
          data-testid="copy-job-flow"
        >
          true
        </div>
        <button
          data-testid="submit-button"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;
